--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "styled-icons": "^10.46.0",
+    "use-debounce": "^8.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
