--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "styled-components": "^5.3.5",
     "styled-icons": "^10.46.0",
     "use-debounce": "^8.0.4",
